Gave note cards fixed heights and made text overflow work for titles

--- a/lambdanotes/src/App.css
+++ b/lambdanotes/src/App.css
@@ -2,6 +2,7 @@
   display: flex;
   text-align: center;
   background: whitesmoke;
+  height: 100vh;
 }
 
 .App-logo {
